01 May 2006: 0.2.10 Miek <miek@miek.nl>
  -- tiny bugfixes + major restore updates --
   * rdup: formalize file handling in rdup:
     - plain files are accepted on the cmd line (they
       already were, but generated a (harmless) warning)
     - if files/dirs do not exist rdup skips them, instead
       of quiting
   * rdup.8: documentation updates, and make it more clear
     that rdup handles file arguments just fine.
   * NEW: restore.sh: added this as a wrapper around rdup and
     monthday.sh and rorrim.sh
   * REMOVED: purge.sh, I want to focus on dump/restore. Everyone
     can write a rm -rf script
   * dump.sh, restore.sh: added -c user@remote switch to ease in 
     remote backups and remote restores.
   * man rdup.8: added -r/-m options.
   * doc: started tex documentation about rdup and its usage, 
     see the tex/ directory.
   * restore.sh, rorrim.sh: -p NUM (strip leading path components
     implmented)
   * Both dump.sh -c and restore.sh need testing.


25 Apr 2006: 0.2.9 Miek <miek@miek.nl>
  -- bugfixes + restore updates --
   * gzip.sh, crypt.sh: ignore and accept '-c' option
   * crypt.sh: use mcrypt -q to be more silent
   * monthday.sh: implement -c option 
     script has completely been rewritten
   * monthday.sh: also process the last file
   * rorrim.sh: -c (remote) fixes and other tweaks
   * dump.sh: support -z (compress) and -k (encrypt) options
   * dump.sh: fix the path to rdup and mirror.sh (Timur Vafin)
   * grep.sh: removed from rdup-utils
   * tests: added monthday +0 restore test
   * install monthday.sh and rorrim.sh by default


22 Apr 2006: 0.2.8 Miek <miek@miek.nl>
   -- bugfixes --
   * scripts: support -V (version) in all scripts
   * scripts: print "invalid option" when encountered to stderr
   * scripts: disable 'set -o nounset' as it clashes with getopt
   * scripts: use read -r to allow for backslashes in filenames
   * gzip.sh, crypt.sh: fix a bug in new size calculation 
     (reported by Erland Isaksson)