@@ -45,6 +45,26 @@ usage() {
         echo " -V        print version"
 }
 
+sanity_check() {
+        # slighty different then in the sh-tools
+        if [[ ! "$mode" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: mode must be numeric"
+                exit 1
+        fi
+        if [[ ! "$psize" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: psize must be numeric"
+                exit 1
+        fi
+        if [[ ! "$fsize" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: fsize must be numeric"
+                exit 1
+        fi
+        if [[ ! "$uid" =~ "[0-9]+" || ! "$gid" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: uid or gid must be numeric"
+                exit 1
+        fi
+}
+
 version() {
         echo "$PROGNAME: @PACKAGE_VERSION@ (rdup-utils)"
 }
@@ -155,6 +175,8 @@ local_restore() {
 
         while read -r mode uid gid psize fsize path
         do
+                sanity_check
+
                 if [[ "$path" =~ "(.+)\\+(..)\\.(..):(..)$" ]]; then
                         basename=${BASH_REMATCH[1]}
                         mo=$((10#${BASH_REMATCH[2]})) # force base 10
@@ -293,6 +315,8 @@ remote_restore() {
 
         while read -r mode uid gid psize fsize
         do
+                sanity_check
+
                 path=$(head -c $psize)
                 
                 if [[ "$path" =~ "(.+)\\+(..)\\.(..):(..)$" ]]; then
