@@ -80,6 +80,29 @@ version() {
         echo "$PROGNAME: @PACKAGE_VERSION@ (rdup-utils)"
 }
 
+sanity_check() {
+        if [[ $dump != "+" && $dump != "-" ]]; then
+                _echo2 "$PROGNAME: dump must be + or -"
+                exit 1
+        fi
+        if [[ ! "$mode" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: mode must be numeric"
+                exit 1
+        fi
+        if [[ ! "$psize" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: psize must be numeric"
+                exit 1
+        fi
+        if [[ ! "$fsize" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: fsize must be numeric"
+                exit 1
+        fi
+        if [[ ! "$uid" =~ "[0-9]+" || ! "$gid" =~ "[0-9]+" ]]; then
+                _echo2 "$PROGNAME: uid or gid must be numeric"
+                exit 1
+        fi
+}
+
 local_mirror() {
         declare -a path # catch spacing in the path
         while read -r mode uid gid psize fsize path
@@ -89,12 +112,15 @@ local_mirror() {
                 bits=$(($mode & $S_MMASK))      # permission bits
                 bits=`printf "%o" $bits`        # and back to octal again
                 typ=0
+
                 if [[ $(($mode & $S_ISDIR)) == $S_ISDIR ]]; then
                         typ=1;
                 fi
                 if [[ $(($mode & $S_ISLNK)) == $S_ISLNK ]]; then
                         typ=2;
                 fi
+
+                sanity_check
                 
                 [[ $verbose -eq 1 ]] && echo $path > /dev/fd/2
 
@@ -171,17 +197,9 @@ remote_mirror() {
                         typ=2;
                 fi
 
-                [[ $verbose -eq 1 ]] && echo $path
+                sanity_check
 
-                # check sanity of data?
-# debugging - the output of rdup should perfectly match our reads
-#echo "$dump$mode $uid $gid $psize $fsize"
-#                echo "m{"$mode"}"
-#                echo "u{"$uid"}"
-#                echo "g{"$gid"}"
-#                echo "l{"$psize"}"
-#                echo "s{"$fsize"}"
-#                echo "p{"$path"}"
+                [[ $verbose -eq 1 ]] && echo $path
 
                 if [[ -e "$backupdir/$path" ]]; then
                         suffix=`mirror_suffix "$backupdir/$path"`
