@@ -1,3 +1,10 @@
+xx May 2006: 0.2.11 Miek <miek@miek.nl
+  -- updates --
+   * scripts: implemented sanity checks on the
+     data received. If there is any inconsistency
+     the script quits
+
+
 01 May 2006: 0.2.10 Miek <miek@miek.nl>
   -- tiny bugfixes + major restore updates --
    * rdup: formalize file handling in rdup:
